--- a/tests/css/selectors.scss
+++ b/tests/css/selectors.scss
@@ -1,3 +1,4 @@
-@import 'bootstrap-sass/assets/stylesheets/bootstrap/variables';
-@import 'bootstrap-sass/assets/stylesheets/bootstrap/mixins/alerts';
-@import '{ .alert, .alert-dismissable as .alert--dismissable, .close as .alert__close } from bootstrap-sass/assets/stylesheets/bootstrap/alerts';
+@import 'bootstrap/scss/variables';
+@import 'bootstrap/scss/mixins/border-radius';
+@import 'bootstrap/scss/mixins/alert';
+@import '{ .alert, .alert-dismissible as .alert--dismissible, .close as .alert__close } from bootstrap/scss/alert';
