--- a/tests/css/module.scss
+++ b/tests/css/module.scss
@@ -1,4 +1,6 @@
-@import 'bootstrap/scss/variables';
-@import 'bootstrap/scss/mixins/border-radius';
-@import 'bootstrap/scss/mixins/alert';
-@import 'bootstrap/scss/alert';
+// The "~" is optional, it is a hint
+// for the importer that this is a module path.
+@import '~bootstrap/scss/variables';
+@import '~bootstrap/scss/mixins/border-radius';
+@import '~bootstrap/scss/mixins/alert';
+@import '~bootstrap/scss/alert';
