--- a/packages/node-sass-selector-importer/test/files/selectors.scss
+++ b/packages/node-sass-selector-importer/test/files/selectors.scss
@@ -1,4 +1,4 @@
-@import '../../node_modules/bootstrap/scss/variables';
-@import '../../node_modules/bootstrap/scss/mixins/border-radius';
-@import '../../node_modules/bootstrap/scss/mixins/alert';
-@import '{ .alert, .alert-dismissible as .alert--dismissible, .close as .alert__close } from ../../node_modules/bootstrap/scss/alert';
+@import 'node_modules/bootstrap/scss/_variables.scss';
+@import 'node_modules/bootstrap/scss/mixins/_border-radius.scss';
+@import 'node_modules/bootstrap/scss/mixins/_alert.scss';
+@import '{ .alert, .alert-dismissible as .alert--dismissible, .close as .alert__close } from node_modules/bootstrap/scss/_alert.scss';
