--- a/test/files/combined.scss
+++ b/test/files/combined.scss
@@ -7,7 +7,7 @@
 @import '~bootstrap/scss/mixins/alert';
 @import '~bootstrap/scss/alert';
 
-@import 'bootstrap/scss/variables';
-@import 'bootstrap/scss/mixins/border-radius';
-@import 'bootstrap/scss/mixins/alert';
-@import '{ .alert, .alert-dismissible as .alert--dismissible, .close as .alert__close } from bootstrap/scss/alert';
+@import '~bootstrap/scss/variables';
+@import '~bootstrap/scss/mixins/border-radius';
+@import '~bootstrap/scss/mixins/alert';
+@import '{ .alert, .alert-dismissible as .alert--dismissible, .close as .alert__close } from ~bootstrap/scss/alert';
