Add storing functionality to track imported files and selectors (fixes #3), cleanup tests, add bootstrap and foundation compile stress tests

--- a/test/files/combined.scss
+++ b/test/files/combined.scss
@@ -1,12 +1,16 @@
+// Glob import.
 @import 'test-imports/**/*.scss';
 
-// The "~" is optional, it is a hint
-// for the importer that this is a module path.
+// Import once.
+@import 'test-imports/test-import1.scss';
+
+// Module import.
 @import '~bootstrap/scss/variables';
 @import '~bootstrap/scss/mixins/border-radius';
 @import '~bootstrap/scss/mixins/alert';
 @import '~bootstrap/scss/alert';
 
+// Selector filtering.
 @import '~bootstrap/scss/variables';
 @import '~bootstrap/scss/mixins/border-radius';
 @import '~bootstrap/scss/mixins/alert';
