--- a/packages/node-sass-selector-importer/test/files/importer.scss
+++ b/packages/node-sass-selector-importer/test/files/importer.scss
@@ -2,3 +2,6 @@
 @import '../../node_modules/bootstrap/scss/mixins/_border-radius.scss';
 @import '../../node_modules/bootstrap/scss/mixins/_alert.scss';
 @import '{ .alert, .alert-dismissible as .alert--dismissible, .close as .alert__close } from ../../node_modules/bootstrap/scss/_alert.scss';
+
+@import '../../node_modules/bootstrap/scss/mixins/_breakpoints.scss';
+@import '{ .jumbotron, /\.jumbotron-(.+)/ as .jumbotron--$1 } from ../../node_modules/bootstrap/scss/_jumbotron.scss';
