Add RegEx example code to the README and add RegEx test

--- a/test/files/combined.scss
+++ b/test/files/combined.scss
@@ -15,3 +15,6 @@
 @import '~bootstrap/scss/mixins/border-radius';
 @import '~bootstrap/scss/mixins/alert';
 @import '{ .alert, .alert-dismissible as .alert--dismissible, .close as .alert__close } from ~bootstrap/scss/alert';
+
+@import '~bootstrap/scss/mixins/breakpoints';
+@import '{ .jumbotron, /\.jumbotron-(.+)/ as .jumbotron--$1 } from ~bootstrap/scss/jumbotron';
