Add method to escape special characters in css selectors. Escape selectors and replacement selectors. Fixes #20

--- a/packages/node-sass-selector-importer/test/files/importer-reference.css
+++ b/packages/node-sass-selector-importer/test/files/importer-reference.css
@@ -28,3 +28,12 @@
   padding-right: 0;
   padding-left: 0;
   border-radius: 0; }
+
+.special\@-characters\/ {
+  content: 'Special characters'; }
+
+.replaced-\@special\/-characters {
+  content: 'Replaced special characters'; }
+
+.regex\@-special\/-charecters {
+  content: 'Regex special characters'; }
