--- a/packages/node-sass-selector-importer/test/files/importer.scss
+++ b/packages/node-sass-selector-importer/test/files/importer.scss
@@ -5,3 +5,9 @@
 
 @import '../../node_modules/bootstrap/scss/mixins/_breakpoints.scss';
 @import '{ .jumbotron, /\.jumbotron-(.+)/ as .jumbotron--$1 } from ../../node_modules/bootstrap/scss/_jumbotron.scss';
+
+@import '{
+  .special\@-characters\/,
+  .replace-\@special\/-characters as .replaced-\@special\/-characters,
+  /\.regex\@-special\/-charecters/
+} from special-characters.scss';
