Allow empty ({}) import and add test import, fixes #25

--- a/packages/node-sass-selector-importer/test/files/importer.scss
+++ b/packages/node-sass-selector-importer/test/files/importer.scss
@@ -11,3 +11,5 @@
   .replace-\@special\/-characters as .replaced-\@special\/-characters,
   /\.regex\@-special\/-charecters/
 } from special-characters.scss';
+
+@import '{} from empty-import.scss'
