Do not escape the @ character when followed by "mixin" to allow the replacement of selectors with @mixin, fixes #24

--- a/packages/node-sass-selector-importer/test/files/importer.scss
+++ b/packages/node-sass-selector-importer/test/files/importer.scss
@@ -9,7 +9,11 @@
 @import '{
   .special\@-characters\/,
   .replace-\@special\/-characters as .replaced-\@special\/-characters,
-  /\.regex\@-special\/-charecters/
+  /\.regex\@-special\/-charecters/,
+  /\.(mixin)/ as @mixin $1
 } from special-characters.scss';
+.mixin-test {
+  @include mixin;
+}
 
 @import '{} from empty-import.scss'
