Use a different regex for matching selectors, this makes it possible to import selectors which are built using a SASS variable syntax, fixes #81

--- a/packages/node-sass-selector-importer/test/files/importer.scss
+++ b/packages/node-sass-selector-importer/test/files/importer.scss
@@ -16,4 +16,6 @@
   @include mixin;
 }
 
-@import '{} from empty-import.scss'
+@import '{} from empty-import.scss';
+
+@import '{ .#{$variable}-test } from variable-import.scss';
