Use glob matching for finding absolute urls.
Find absolute urls for import urls that use the sass naming patterns (e.g. "filename" can resolve to "_filename.scss"). Fixes #89

--- a/test/files/combined.scss
+++ b/test/files/combined.scss
@@ -1,3 +1,7 @@
+// SASS filename variations
+@import 'test-imports/_underscore.scss';
+@import 'test-imports/nofileending';
+
 // Glob import.
 @import 'test-imports/**/*.scss';
 
