--- a/test/files/combined-reference.css
+++ b/test/files/combined-reference.css
@@ -1,3 +1,9 @@
+.underscore-test {
+  content: 'underscore test'; }
+
+.no-file-ending-test {
+  content: 'no file ending test'; }
+
 .test-import1-1 {
   content: 'Test import 1-1'; }
 
