--- a/test/files/filter-import.css
+++ b/test/files/filter-import.css
@@ -5,6 +5,12 @@
   .partial-3-mq {
     content: 'Partial 3 mq'; } }
 
+.variable-test {
+  content: variable; }
+
+.mixin-test .selector-inside-mixin-at-rule {
+  content: 'Selector inside mixin at rule'; }
+
 .test-selector {
   content: "test";
   color: #fff;
