--- a/test/files/selector-import.scss
+++ b/test/files/selector-import.scss
@@ -1,7 +1,7 @@
 @import '../../node_modules/bootstrap/scss/_variables.scss';
 @import '../../node_modules/bootstrap/scss/mixins/_border-radius.scss';
 @import '../../node_modules/bootstrap/scss/mixins/_alert.scss';
-@import '{ .alert, .alert-dismissible as .alert--dismissible, .close as .alert__close } from ../../node_modules/bootstrap/scss/_alert.scss';
+@import '{ .alert, .alert-dismissible as .alert--dismissible, .close as .alert__close } from ../../node_modules/bootstrap/scss/alert';
 
 @import '../../node_modules/bootstrap/scss/mixins/_breakpoints.scss';
 @import '{ .jumbotron, /\.jumbotron-(.+)/ as .jumbotron--$1 } from ../../node_modules/bootstrap/scss/_jumbotron.scss';
