--- a/test/files/selector-import.scss
+++ b/test/files/selector-import.scss
@@ -1,3 +1,4 @@
+@import '../../node_modules/bootstrap/scss/_functions.scss';
 @import '../../node_modules/bootstrap/scss/_variables.scss';
 @import '../../node_modules/bootstrap/scss/mixins/_border-radius.scss';
 @import '../../node_modules/bootstrap/scss/mixins/_alert.scss';
