--- a/test/files/selector-import.css
+++ b/test/files/selector-import.css
@@ -14,14 +14,11 @@
 .jumbotron {
   padding: 2rem 1rem;
   margin-bottom: 2rem;
-  background-color: #eceeef;
+  background-color: #e9ecef;
   border-radius: 0.3rem; }
   @media (min-width: 576px) {
     .jumbotron {
       padding: 4rem 2rem; } }
-
-.jumbotron--hr {
-  border-top-color: #d0d5d8; }
 
 .jumbotron--fluid {
   padding-right: 0;
