--- a/test/files/selector-import.css
+++ b/test/files/selector-import.css
@@ -48,3 +48,12 @@
 
 .replaced {
   content: 'Partial 2'; }
+
+.partial-4-1 {
+  content: 'Partial 4-1'; }
+
+.partial-4-2 {
+  content: 'Partial 4-2'; }
+
+.partial-4-3 {
+  content: 'Partial 4-3'; }
