--- a/test/files/selector-import.scss
+++ b/test/files/selector-import.scss
@@ -24,3 +24,5 @@
 
 @import '{ .partial-1-1, .partial-1-3 } from partials/partial-1';
 @import '{ .partial-2 as .replaced } from partials/partial-2';
+
+@import '{ /\.partial-4-[1-3]/ } from partials/partial-4';
