Fully support importing .css files by default
Importing .css files with package importing with the magic-importer was
not possible because the file ending was not removed.

Importing .css files with the package-importer was only possible with
changing an undocumented configuration option, this was changed so it is
possible by default.

Fixes #91

--- a/test/files/package-import.css
+++ b/test/files/package-import.css
@@ -1,2 +1,8 @@
 .test-package-main {
-  content: 'main file'; }
+  content: 'main scss file'; }
+
+.test-package-main {
+  content: 'main css file'; }
+
+.test-package-css {
+  content: 'css index file'; }
