Add a test which is using namespaced packages
See https://github.com/maoberlehner/node-sass-magic-importer/issues/163

--- a/test/files/package-import.css
+++ b/test/files/package-import.css
@@ -6,3 +6,12 @@
 
 .test-package-css {
   content: 'css index file'; }
+
+.namespace-test-package-main {
+  content: 'namespace main scss file'; }
+
+.namespace-test-package-main {
+  content: 'namespace main css file'; }
+
+.namespace-test-package-css {
+  content: 'namespace css index file'; }
